# AAPT2_Android

./: README.md
CPPAppSample/: settings.gradle
CPPAppSample/app/: build.gradle
CPPAppSample/app/src/androidTest/java/com/myexample/cppappsample/: ExampleInstrumentedTest.java
CPPAppSample/app/src/main/: AndroidManifest.xml
CPPAppSample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CPPAppSample/app/src/main/java/com/myexample/cppappsample/: MainActivity.java
CPPAppSample/app/src/main/res/values/: strings.xml  themes.xml
CPPAppSample/app/src/main/res/values-night/: themes.xml
CPPAppSample/app/src/test/java/com/myexample/cppappsample/: ExampleUnitTest.java
CPPAppSample/gradle/wrapper/: gradle-wrapper.properties
